# hpc-img-convolution

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Documentation.tex  HPC2020Config.h.in  LICENSE  README.md  convolutions.h  exec.sh  helper.cpp  helper.h  hpc_convolution.doxy  io.h  main.cpp  mainpage.md  makefile  operations.cpp  operations.h  output.txt  test-mpi-scatter.cpp
docs/: Doxyfile.in  conf.py  index.rst
docs/api/: helper.rst  index.rst  io.rst  seq_convolutions.rst
html/: genindex.html  globals_func.html  helper_8cpp.html  helper_8h.html  index.html  io_8cpp.html  io_8h.html  main_8cpp.html  mpi__convolutions_8h.html  objects.inv  searchindex.js
html/_sources/api/: mpi_convolutions.rst.txt
html/api/: helper.html  io.html  main.html  mpi_convolutions.html
html/html/: .buildinfo  convolutions_8h.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  search.html
html/html/_sources/: index.rst.txt
html/html/_sources/api/: convolutions.rst.txt
html/html/api/: index.html
html/html/search/: all_0.js  all_4.js  files_0.js  files_3.js  functions_0.js
html/search/: functions_4.js  searchdata.js
include/: convolutions.h  helper.h  io.h  kernels.h  mpi_convolutions.h  seq_convolutions.h
public/: files.html  globals.html  index.html
public/_sources/api/: index.rst.txt  main.rst.txt
public/api/: convolutions.html
public/search/: functions_3.js
scripts/: script.pbs
src/: CMakeLists.txt  convolutions.h  helper.cpp  io.cpp  kernels.cpp  main.cpp  mpi_convolutions.cpp  mpi_convolutions.h  seq_convolutions.cpp
