cmake_minimum_required(VERSION 3.1)
project(HPC2020 VERSION 1.0)
option(WITH_OPTION "A dummy" ON)
option(WITH_MPI "Use MPI" ON)
if(WITH_MPI)
    find_package(MPI COMPONENTS CXX)
    if(MPI_FOUND)
        set(CMAKE_CXX_COMPILER mpic++)
    else()
        message("MPI not found, using default C++ compiler")
    endif(MPI_FOUND)
else()
    message("MPI disabled, using default C++ compiler")
endif(WITH_MPI)
configure_file(HPC2020Config.h.in HPC2020Config.h)
set(SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/main.cpp)
add_executable(${PROJECT_NAME} ${SOURCE_FILES})
add_subdirectory(${PROJECT_SOURCE_DIR}/src)
list(APPEND EXTRA_LIBS
    Helper
    IO
)
target_link_libraries(${PROJECT_NAME} PRIVATE ${EXTRA_LIBS})
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/src)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_BINARY_DIR})